Display for game labels + Fixed game end alert

--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,10 @@ body {
     /* position: relative; */
 }
 
+.statusBox {
+    display: none;
+}
+
 .board {
     position: relative;
     margin: auto;
